deploy/admission_webhook.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-api
  labels:
    name: gateway-api
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: gateway-api-admission
webhooks:
  - name: validate.networking.x-k8s.io
    matchPolicy: Equivalent
    rules:
      - operations: [ "CREATE" , "UPDATE" ]
        apiGroups: [ "networking.x-k8s.io" ]
        apiVersions: [ "v1alpha1" ]
        resources: [ "httproutes" ]
    failurePolicy: Fail
    sideEffects: None
    admissionReviewVersions:
      - v1
    clientConfig:
      service:
        name: gateway-api-admission
        namespace: gateway-api
        path: "/validate"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: gateway-api-webhook
    version: 0.0.1
  name: gateway-api-admission
  namespace: gateway-api
spec:
  type: ClusterIP
  ports:
    - name: https-webhook
      port: 443
      targetPort: 8443
  selector:
    name: gateway-api-admission
---
# TODO(cmluciano): Tone down logging level for webhook
# once we are satified with it's stability.
#
# TODO(cmluciano): Swap image name to the k8s official namespace
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-api-admission
  namespace: gateway-api
  labels:
    name: gateway-api-admission
spec:
  replicas: 1
  selector:
    matchLabels:
      name: gateway-api-admission
  template:
    metadata:
      name: gateway-api-admission
      labels:
        name: gateway-api-admission
    spec:
      containers:
        - name: webhook
          image: cmluciano/gateway-api-admission:latest
          imagePullPolicy: Always
          args:
            - -logtostderr
            - --tlsCertFile=/etc/certs/cert
            - --tlsKeyFile=/etc/certs/key
            - -v=10
            - 2>&1
          ports:
            - containerPort: 8443
              name: webhook
          resources:
            limits:
              memory: 50Mi
              cpu: 300m
            requests:
              memory: 50Mi
              cpu: 300m
          volumeMounts:
            - name: webhook-certs
              mountPath: /etc/certs
              readOnly: true
          securityContext:
            readOnlyRootFilesystem: true
      volumes:
        - name: webhook-certs
          secret:
            secretName: gateway-api-admission
